--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,3 +1,4 @@
+<div id='game'>
     <div id='fb-root'></div>
     <!-- game js -->
     <script src="libs/jcarousel-min.js"></script>
@@ -9,10 +10,6 @@
     </script>
     <!-- game js end -->
 
-    <a href='https://shellycloud.com/' target='_blank'><img src='assets/images/shellyLogo.png' class='shelly-logo'></img></a>
-
-    <p>Wersja testowa. Spostrzeżone błędy i wszelkie uwagi krytyczne proszę wysyłać na: p.urbanek89@gmail.com </p>
-    <p>Dzięki ! :)</p>
 
   <!-- google analitics -->
   <script type="text/javascript">
@@ -28,3 +25,4 @@
   </script>
   <!-- google analitics end -->
 
+</div>
