added basic request specs

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,7 @@
     <%= link_to image_tag('shellyLogo.png'), 'https://shellycloud.com/', target: '_blank' %>
   </div>
 
+  <%= render 'analytics' %>
+
 </body>
 </html>
