--- a/app/views/static_pages/_facebook_login.html.erb
+++ b/app/views/static_pages/_facebook_login.html.erb
@@ -3,6 +3,6 @@
     Welcome <strong><%= current_user.name %></strong>!
     <%= link_to "Sign out", signout_path, id: "sign_out" %>
   <% else %>
-    <%= link_to "Sign in with Facebook", "/auth/facebook", id: "sign_in" %>
+    <%= link_to "Zaloguj się", "/auth/facebook", id: "sign_in" %> aby dołączyć do Mistrzów Siorbania
   <% end %>
 </div>
