--- a/app/views/static_pages/_ranking.html.erb
+++ b/app/views/static_pages/_ranking.html.erb
@@ -4,7 +4,8 @@
 
   <% @players.each do |player| %>
 
-  <%= player.email %>
+    <%= player.nickname %>
+    <%= player.best_score %>
 
   <% end %>
 
