small fixes, switching to haml now

--- a/app/views/static_pages/_ranking.html.erb
+++ b/app/views/static_pages/_ranking.html.erb
@@ -2,9 +2,11 @@
 
   <%= render 'facebook_login' %>
 
+  <h2>Mistrzowie Siorbania </h2>
+
   <% @players.each do |player| %>
 
-    <%= player.nickname %>
+    <%= player.name %>
     <%= player.best_score %>
 
   <% end %>
