some specs and spec helpers

--- a/app/views/static_pages/_facebook_login.html.haml
+++ b/app/views/static_pages/_facebook_login.html.haml
@@ -2,7 +2,7 @@
   - if current_user
     Welcome
     = current_user.name
-    = link_to "Sign out", signout_path, id: "sign_out"
+    = link_to "Wyloguj się", signout_path, id: "sign_out"
   - else
     = link_to "Zaloguj się", "/auth/facebook", id: "sign_in"
     aby dołączyć do Mistrzów Siorbania
