fetch user birthday

--- a/app/views/static_pages/_ranking.html.haml
+++ b/app/views/static_pages/_ranking.html.haml
@@ -4,7 +4,9 @@
 
   %h2 Mistrzowie Siorbania
 
-  - @players.each do |player|
+  - @players.each_with_index do |player, index|
+    = "#{index+1}."
+    // = image_tag(player.image_url)
     = player.nickname
     = player.best_score
 
