added innitial modal, sterted adding contact message

--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -18,3 +18,15 @@
   padding-top: 10px;
   clear: both;
 }
+
+.nickname-form #user_nickname {
+  border:2px solid #000000;
+  border-radius:10px;
+  height: 32px;
+  width: 180px;
+  font-size: 18px;
+}
+
+.modal-body {
+  font-size: 18px;
+}
