--- a/app/views/static_pages/_nickname_form.html.haml
+++ b/app/views/static_pages/_nickname_form.html.haml
@@ -1,6 +1,6 @@
 - if current_user
   Twój nickname
-  = form_for current_user, html: {class: "nifty_form"} do |f|
+  = form_for current_user, html: {class: "nickname-form"} do |f|
     = f.text_field :nickname
     = f.submit "Zmień nickname"
 - else
