arrange stuff with bootstrap grid system

--- a/app/assets/stylesheets/siorb.css
+++ b/app/assets/stylesheets/siorb.css
@@ -1,6 +1,6 @@
 /* Crafty styling */
 
-#cr-stage {
+#game {
   background-image: url('http://siorb.dobreziele.pl/assets/images/gameplayBg.jpg');
 }
 
