--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -5,19 +5,22 @@
 
 
 
-#cr-stage {
-  float: left;
+#game {
+  // margin: 30px 0px 0px 30px;
 }
 
 #ranking {
-  padding: 0px 0px 0px 20px;
-  float: left;
+  // padding: 0px 0px 0px 20px;
+  // height: 600px;
 }
 
-#shelly-logo {
-  padding-top: 10px;
-  clear: both;
+#shelly-logo img {
+  padding: 10px 0px 0px 10px;
 }
+
+#contact-message {
+}
+
 
 .nickname-form #user_nickname {
   border:2px solid #000000;
