--- a/app/views/static_pages/_nickname_form.html.haml
+++ b/app/views/static_pages/_nickname_form.html.haml
@@ -1,6 +1,6 @@
 - if current_user
-  Twój nickname
-  = form_for current_user, html: {class: "nickname-form"} do |f|
+  = form_for current_user, html: { id: "nickname-form"} do |f|
+    Twój nickname
     = f.text_field :nickname
-    = f.submit "Zmień nickname"
+    = f.submit "Zmień nickname", class: 'btn btn-default btn-xs'
 - else
