stuff and hakerka prevention

--- a/app/views/static_pages/_contact_message_form.html.haml
+++ b/app/views/static_pages/_contact_message_form.html.haml
@@ -2,7 +2,7 @@
   .span.contact-form-btn Uważam, że
   = form_for ContactMessage.new, remote: true do |f|
     = f.text_area :content, placeholder: "Twoje zdanie jest dla nas ważne", class: 'text', rows: '6'
-    = f.submit "Wyślii", class: 'btn btn-default submit'
+    = f.submit "Wyślij", class: 'btn btn-default submit'
 
 
 
