--- a/app/views/static_pages/_info_modal.html.haml
+++ b/app/views/static_pages/_info_modal.html.haml
@@ -2,7 +2,7 @@
   %span.heading Mistrzowie Siorbania
 
   %button.btn.btn-default.btn-xs#infoModal-btn{"data-target" => "#infoModal", "data-toggle" => "modal"}
-    O co cho ?
+    O co chodzi ?
 
 #infoModal.modal.fade{"aria-hidden" => "true", "aria-labelledby" => "myModalLabel", role: "dialog", tabindex: "-1"}
   .modal-dialog
