--- a/app/views/static_pages/_ranking.html.haml
+++ b/app/views/static_pages/_ranking.html.haml
@@ -1,7 +1,6 @@
 #ranking
-  #fb-stuff
-    = render 'facebook_login'
-    = render 'nickname_form'
+  #user-stuff
+    = render 'user_info'
   = render 'info_modal'
 
 
