--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -10,14 +10,14 @@
 
 #contact-message {
   padding-top: 15px;
-  width: 370px;
+  width: 410px;
 
   .contact-form-btn {
-    margin: 0px 0px 10px 250px;
+    margin: 0px 0px 10px 280px;
   }
 
   form {
-    margin-left: 90px;
+    margin-left: 120px;
   }
 
   .submit {
@@ -32,6 +32,10 @@
     width: 260px;
     font-size: 15px;
   }
+}
+
+#ranking {
+  padding-left: 20px;
 }
 
 
