--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -11,7 +11,7 @@
     #shelly-logo.col-lg-6
       = link_to image_tag('shellyLogo.png'), 'https://shellycloud.com/', target: '_blank'
 
-    .col-lg-6
+    #contact-message.col-lg-6
       =render 'contact_message_form'
 #ranking-wrapper.col-lg-4.nopadding
   = render 'ranking'
