--- a/app/views/static_pages/_contact_message_form.html.haml
+++ b/app/views/static_pages/_contact_message_form.html.haml
@@ -1,6 +1,6 @@
 .span.contact-form-btn.btn.btn-default Uważam, że
 = form_for ContactMessage.new, remote: true do |f|
-  = f.text_area :content, placeholder: "Twoje zdanie jest dla nas ważne !", class: 'text', rows: '6'
+  = f.text_area :content, placeholder: "Twoje zdanie jest dla nas ważne !", class: 'text', rows: '6', maxlength: ContactMessage::MAX_CONTENT_LENGTH
   = f.submit "Wyślij", class: 'btn btn-default submit'
 
 
