--- a/app/views/static_pages/_nickname_form.html.haml
+++ b/app/views/static_pages/_nickname_form.html.haml
@@ -1,4 +1,4 @@
 = form_for current_user, html: { id: "nickname-form"} do |f|
   Nickname:
-  = f.text_field :nickname
+  = f.text_field :nickname, maxlength: User::MAX_NICKNAME_LENGTH
   = f.submit "Zmień nickname", class: 'btn btn-default btn-xs'
