--- a/app/views/static_pages/home.html.haml
+++ b/app/views/static_pages/home.html.haml
@@ -10,6 +10,7 @@
   .row
     #shelly-logo.col-lg-6
       = link_to image_tag('shellyLogo.png'), 'https://shellycloud.com/', target: '_blank'
+      = link_to image_tag('craftyLogo.png'), 'http://craftyjs.com/', target: '_blank'
 
     #contact-message.col-lg-6
       =render 'contact_message_form'
