--- a/app/views/static_pages/_facebook_login.html.haml
+++ b/app/views/static_pages/_facebook_login.html.haml
@@ -4,7 +4,8 @@
     = current_user.name
     = link_to "wyloguj się", signout_path, id: "sign_out"
   - else
-    = link_to "Zaloguj się", "/auth/facebook", id: "sign_in"
-    aby dołączyć do Mistrzów Siorbania
+    .sign-in-field
+      = link_to "Zaloguj się", "/auth/facebook", id: "sign_in"
+      aby dołączyć do Mistrzów Siorbania
 
 
