--- a/app/assets/stylesheets/static_pages.css.scss
+++ b/app/assets/stylesheets/static_pages.css.scss
@@ -37,6 +37,25 @@
   }
 }
 
+#facebook-login {
+  a {
+    color: #bbbbbb;
+  }
+
+  a:hover {
+    color: #000000;
+    text-decoration: none;
+  }
+  .sign-in-field {
+    background-image:url('fbIcon.png');
+    background-repeat: no-repeat;
+    background-position:76px -5px;
+  }
+  a {
+    padding-right: 22px;
+  }
+}
+
 #ranking {
   padding-left: 30px;
   height: 500px;
@@ -47,6 +66,15 @@
 
   #user-stuff {
     height: 100px;
+
+    .place-in-ranking {
+      padding-top: 15px;
+
+    }
+  }
+
+  #infoModal-heading {
+    padding-left: 15px;
   }
 
   #player-list {
@@ -75,15 +103,21 @@
 
 
 #nickname-form {
-  padding: 20px 0px 0px 0px;
+  padding: 10px 0px 0px 0px;
 
   input[type=text] {
    padding-left: 5px;
   }
 
+  .btn {
+    margin-bottom: 2px;
+    height: 22px;
+
+  }
+
   #user_nickname {
     border:1px solid #cccccc;
-    border-radius:5px;
+    border-radius:3px;
     height: 22px;
     width: 180px;
     font-size: 15px;
