--- a/app/views/static_pages/_user_info.html.haml
+++ b/app/views/static_pages/_user_info.html.haml
@@ -1,5 +1,6 @@
 = render 'facebook_login'
 - if current_user
   = render 'nickname_form'
-  Twoje miejsce w rankingu:
-  = current_user.place_in_ranking
+  .place-in-ranking
+    Twoje miejsce w rankingu:
+    = current_user.place_in_ranking
