more styling, added unused flash and prevent fb multiclick

--- a/app/views/static_pages/_facebook_login.html.haml
+++ b/app/views/static_pages/_facebook_login.html.haml
@@ -2,7 +2,7 @@
   - if current_user
     Witaj
     = current_user.name
-    = link_to "wyloguj się", signout_path, id: "sign_out"
+    = link_to "wyloguj się", signout_path, id: "sign_out", data: { confirm: "Na pewno ?" }
   - else
     .sign-in-field
       = link_to "Zaloguj się", "/auth/facebook", id: "sign_in"
