--- a/app/assets/stylesheets/blame.css.scss
+++ b/app/assets/stylesheets/blame.css.scss
@@ -20,3 +20,12 @@
   padding-left: 0 !important;
   padding-right: 0 !important;
 }
+
+/* customize flash container */
+.my-flash {
+  .alert {
+    margin-bottom: 5px !important;
+    padding-top: 5px !important;
+    padding-bottom: 5px !important;
+  }
+}
