--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,3 +1,8 @@
-dupa
-
-= yield
+%html
+  %head
+    %title Siorb - Droga do Rozbudzenia Admin Area
+    = stylesheet_link_tag    "application"
+    = javascript_include_tag "admin/application"
+    = csrf_meta_tags
+  %body
+    = yield
