--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -3,6 +3,7 @@
     %title Siorb - Droga do Rozbudzenia Admin Area
     = stylesheet_link_tag    "application"
     = javascript_include_tag "admin/application"
+    %script{src: 'http://code.angularjs.org/1.2.9/angular-route.min.js'}
     = csrf_meta_tags
   %body
     = yield
