--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -3,7 +3,7 @@
   font-size: 16px;
   background-image:url('rankingBg.png');
   background-repeat: no-repeat;
-  background-position:140px 180px;
+  background-position:140px 130px;
 
   .bold {
     font-weight: bold;
@@ -14,12 +14,11 @@
     padding: 10px 0px 15px 0px;
 
     .place-in-ranking {
-      padding-top: 8px;
-
+      padding-top: 3px;
     }
 
     #nickname-form {
-      padding: 10px 0px 0px 0px;
+      padding: 5px 0px 0px 0px;
 
       input[type=text] {
        padding-left: 5px;
@@ -28,7 +27,6 @@
       .btn {
         margin-bottom: 2px;
         height: 22px;
-
       }
 
       #user_nickname {
@@ -40,7 +38,7 @@
       }
     }
 
-    #facebook-login {
+    #login-stuff {
       a {
         color: #bbbbbb;
       }
@@ -62,7 +60,7 @@
 
 
   #player-list {
-    padding: 140px 0px 0px 60px;
+    padding: 100px 0px 0px 60px;
     width: 330px;
 
     .player-entry {
@@ -85,7 +83,7 @@
   }
 
   #infoModal-heading {
-    padding: 50px 0px 15px 15px;
+    padding: 0px 0px 15px 15px;
 
     #infoModal-btn {
       margin: 5px 0px 0px 310px;
