--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -3,7 +3,7 @@
   font-size: 16px;
   background-image:url('rankingBg.png');
   background-repeat: no-repeat;
-  background-position:140px 130px;
+  background-position:140px 180px;
 
   .bold {
     font-weight: bold;
@@ -14,11 +14,12 @@
     padding: 10px 0px 15px 0px;
 
     .place-in-ranking {
-      padding-top: 3px;
+      padding-top: 8px;
+
     }
 
     #nickname-form {
-      padding: 5px 0px 0px 0px;
+      padding: 10px 0px 0px 0px;
 
       input[type=text] {
        padding-left: 5px;
@@ -27,6 +28,7 @@
       .btn {
         margin-bottom: 2px;
         height: 22px;
+
       }
 
       #user_nickname {
@@ -38,7 +40,7 @@
       }
     }
 
-    #login-stuff {
+    #facebook-login {
       a {
         color: #bbbbbb;
       }
@@ -60,7 +62,7 @@
 
 
   #player-list {
-    padding: 100px 0px 0px 60px;
+    padding: 140px 0px 0px 60px;
     width: 330px;
 
     .player-entry {
@@ -83,7 +85,7 @@
   }
 
   #infoModal-heading {
-    padding: 0px 0px 15px 15px;
+    padding: 50px 0px 15px 15px;
 
     #infoModal-btn {
       margin: 5px 0px 0px 310px;
