--- a/app/assets/stylesheets/siorb.css
+++ b/app/assets/stylesheets/siorb.css
@@ -17,23 +17,28 @@
 
 /* jcarousel styles */
 
- .jcarousel {
-    position: relative;
-    overflow: hidden;
-    width: 431px;
-    height: 287px;
+.jcarousel {
+  position: relative;
+  overflow: hidden;
+  width: 431px;
+  height: 287px;
 }
 
 .jcarousel ul {
-    width: 20000em;
-    position: relative;
-    list-style: none;
-    margin: 0;
-    padding: 0;
+  width: 20000em;
+  position: relative;
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
 
 .jcarousel li {
-    float: left;
+  float: left;
+}
+
+.inactive {
+  display: none !important;
+  visibility: none !important;
 }
 
 /* jcarousel styles end */
