--- a/app/views/static_pages/_info_modal.html.haml
+++ b/app/views/static_pages/_info_modal.html.haml
@@ -11,6 +11,12 @@
         %button.close{"aria-hidden" => "true", "data-dismiss" => "modal", type: "button"} ×
         %h3#myModalLabel.modal-title Mistrzowie Siorbania
       .modal-body
-        Mistrzowie Siorbania to elitarna grupa największych yerbochłonów Polski. Po zalogowaniu się przez facebooka będziesz mógł zapisać swój wynik. Umożliwi ci to też dostęp do najlepszych promocji i konkursów organizowanych przez Dobre Ziele. Zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera. Obiecujemy, że nie będzie spamu i każdej chwili możesz się z niego wypisać
+        Mistrzowie Siorbania to elitarna grupa największych Yerbochłonów Polski!
+        %ul
+          %li zaloguj się przez facebooka lub przez e-mail, aby móc zapisać swój wynik
+          %li sklep Dobre Ziele regularnie funduje atrakcyjną nagrodę dla czołowego yerbochłona
+          %li zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera
+          %li dzięki temu będziesz miał dostęp do najlepszych promocji, nowości i konkursów organizowanych przez Dobre Ziele
+          %li obiecujemy, że nie będzie spamu i każdej chwili możesz się z niego wypisać
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Zamknij
