added ajax pagination

--- a/app/views/static_pages/_ranking.html.haml
+++ b/app/views/static_pages/_ranking.html.haml
@@ -5,15 +5,9 @@
   = render 'info_modal'
 
 
+
   #player-list
-    - @players.each do |player|
-      .player-entry
-        .place{class: "#{nickname_class(player)}"}
-          = "#{player.place_in_ranking}."
-        .nickname{class: "#{nickname_class(player)}"}
-          = "#{player.nickname}"
-        .score{class: "#{nickname_class(player)}"}
-          = player.best_score
+    = render 'players'
 
 
 
