--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -2,8 +2,10 @@
   %head
     %title Siorb - Droga do Rozbudzenia Admin Area
     = stylesheet_link_tag    "application"
+    = include_gon
+    %script{src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"}
+    %script{src: 'http://code.angularjs.org/1.2.15/angular-route.min.js'}
     = javascript_include_tag "admin/application"
-    %script{src: 'http://code.angularjs.org/1.2.9/angular-route.min.js'}
     = csrf_meta_tags
   %body
     = yield
