added baaic bootstrap for angular part

--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -1,7 +1,11 @@
 usersa
 
-%button{'ng-click' => 'getData()'} clicka me
+%button.btn.btn-default{'ng-click' => 'getData()'} clicka me
 
+%input{'ng-model'=> 'userFilter'}
 %ul
-  %li{'ng-repeat' => 'user in users'}
+  %li{'ng-repeat' => 'user in users | filter:userFilter'}
     {{user.name}}
+    {{user.nickname}}
+
+%table.table.table-stripped
