--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %title Siorb - Droga do Rozbudzenia Admin Area
-    = stylesheet_link_tag    "application"
+    = stylesheet_link_tag    "admin/application"
     = include_gon
     %script{src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"}
     %script{src: 'http://code.angularjs.org/1.2.15/angular-route.min.js'}
