--- a/app/assets/stylesheets/admin/panel.css.scss
+++ b/app/assets/stylesheets/admin/panel.css.scss
@@ -1,3 +1,8 @@
 // Place all the styles related to the Admin::Panel controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+
+
+#panel-content {
+  padding: 0px 0px 0px 20px;
+}
