--- a/app/views/admin/panel/home.html.haml
+++ b/app/views/admin/panel/home.html.haml
@@ -1,6 +1,24 @@
 %div{'ng-app' => 'SiorbStats'}
-  %input{'ng-model' => 'user'}
-  {{user}}
+  %nav.navbar.navbar-inverse{role: "navigation"}
+    .container-fluid
+      / Brand and toggle get grouped for better mobile display
+      .navbar-header
+        %button.navbar-toggle{"data-target" => "#bs-example-navbar-collapse-1", "data-toggle" => "collapse", type: "button"}
+          %span.sr-only Toggle navigation
+          %span.icon-bar
+          %span.icon-bar
+          %span.icon-bar
+        %a.navbar-brand{href: ""} SiorbStats
+      / Collect the nav links, forms, and other content for toggling
+      #bs-example-navbar-collapse-1.collapse.navbar-collapse
+        %ul.nav.navbar-nav
+          %li
+            %a{href: "/admin/#/users"} Użytkownicy
+          %li
+            %a{href: "/admin/#/statistics"} Statystyki
 
-  %div{'ng-view' => ''}
-  %navigation
+
+
+  #panel-content
+    %div{'ng-view' => ''}
+    %navigation
