can delete user with admin panel now

--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -35,4 +35,4 @@
       %td
         {{user.location}}
       %td
-        .btn.btn-sm.btn-danger Usuń z bazy
+        .btn.btn-sm.btn-danger{'ng-click' => "removeUser(user.id)"} Usuń z bazy
