added custom ip excluding filter

--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -1,4 +1,4 @@
-%input{'ng-model'=> 'userFilter.name'}
+%input.form-control{'ng-model'=> 'userFilter', 'placeholder' => 'Szukaj'}
 
 %table.table.table-striped
   %thead
