--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -1,3 +1,6 @@
+%input.form-control{'ng-model'=> 'ipFilter.ip', 'placeholder' => 'Wyklucz ip'}
+%input.form-control{'ng-model'=> 'statFilter', 'placeholder' => 'Szukaj'}
+
 %table.table.table-striped
   %thead
     %tr
@@ -11,7 +14,7 @@
         .btn.btn-sm.btn-default Data
       %th
   %tbody
-    %tr{'ng-repeat' => 'stat in statistics | orderBy:order.attr:order.reverse'}
+    %tr{'ng-repeat' => "stat in statistics | filter:statFilter | excludeIp:ipFilter | orderBy:order.attr:order.reverse" }
       %td
         {{stat.ip}}
       %td
