--- a/app/views/layouts/admin.html.haml
+++ b/app/views/layouts/admin.html.haml
@@ -5,6 +5,7 @@
     = include_gon
     %script{src: "http://ajax.googleapis.com/ajax/libs/angularjs/1.2.15/angular.min.js"}
     %script{src: 'http://code.angularjs.org/1.2.15/angular-route.min.js'}
+    %script{src: 'http://code.angularjs.org/1.2.15/angular-animate.min.js'}
     = javascript_include_tag "admin/application"
     = csrf_meta_tags
   %body
