buttons for reloading data

--- a/app/views/admin/panel/statistics.html.haml
+++ b/app/views/admin/panel/statistics.html.haml
@@ -1,3 +1,5 @@
+%button.btn.btn-default.btn-sm.reload-btn{'ng-click' => 'reloadData()'} Odśwież
+
 %input.form-control{'ng-model'=> 'ipFilter.ip', 'placeholder' => 'Wyklucz ip'}
 %input.form-control{'ng-model'=> 'statFilter', 'placeholder' => 'Szukaj'}
 
