--- a/app/views/admin/panel/users.html.haml
+++ b/app/views/admin/panel/users.html.haml
@@ -1,3 +1,4 @@
+%button.btn.btn-default.btn-sm.reload-btn{'ng-click' => 'reloadData()'} Odśwież
 %input.form-control{'ng-model'=> 'userFilter', 'placeholder' => 'Szukaj'}
 
 %table.table.table-striped
