--- a/app/views/static_pages/_info_modal.html.haml
+++ b/app/views/static_pages/_info_modal.html.haml
@@ -13,10 +13,10 @@
       .modal-body
         Mistrzowie Siorbania to elitarna grupa największych Yerbochłonów Polski!
         %ul
-          %li zaloguj się przez facebooka lub przez e-mail, aby móc zapisać swój wynik
+          %li zaloguj się przez facebooka aby móc zapisać swój wynik
           %li sklep Dobre Ziele regularnie funduje atrakcyjną nagrodę dla czołowego yerbochłona
           %li zapisanie się do Mistrzów Siorbania jest jednoznaczne z subskrypcją Siorbslettera
-          %li dzięki temu będziesz miał dostęp do najlepszych promocji, nowości i konkursów organizowanych przez Dobre Ziele
           %li obiecujemy, że nie będzie spamu i każdej chwili możesz się z niego wypisać
+          %li dzięki temu będziesz miał dostęp do najlepszych promocji, nowości i konkursów organizowanych przez Dobre Ziele
       .modal-footer
         %button.btn.btn-default{"data-dismiss" => "modal", type: "button"} Zamknij
