--- a/app/assets/stylesheets/ranking.css.scss
+++ b/app/assets/stylesheets/ranking.css.scss
@@ -50,6 +50,7 @@ $greyColor: #bbbbbb;
         background-image:url('fbIcon.png');
         background-repeat: no-repeat;
         background-position:76px -5px;
+        width: 380px;
       }
       a {
         padding-right: 22px;
