--- a/app/views/static_pages/_facebook_login.html.haml
+++ b/app/views/static_pages/_facebook_login.html.haml
@@ -6,6 +6,6 @@
   - else
     .sign-in-field
       = link_to "Zaloguj się", "/auth/facebook", id: "sign_in"
-      aby dołączyć do Mistrzów Siorbania
+      , aby dołączyć do Mistrzów Siorbania
 
 
